--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,8 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 200px;
+    margin-top: 200px;
+    margin-bottom: 200px;
     padding: 0px;
 }
 
