--- a/styles.css
+++ b/styles.css
@@ -16,8 +16,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-top: 200px;
-    margin-bottom: 200px;
+    margin: 200px;
     padding: 0px;
 }
 
@@ -107,4 +106,22 @@ ul, ol {
 .attribution a {
     color: hsl(228, 45%, 44%);
     text-decoration: none;
+}
+
+@media screen and (max-width: 1000px) {
+    body {
+        margin: 0px;
+        padding: 0px;
+    }
+    
+    main {
+        margin: auto;
+        padding: 30px;
+        width: 375px;
+        height: auto;
+    }
+
+    main img {
+        width: 375px;
+    }
 }
